--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "sourceMap": false
+    "sourceMap": false,
+    "module": "NodeNext"
   },
   "exclude": ["src/**/__tests__/**/*"]
 }
