--- a/.ncurc.json
+++ b/.ncurc.json
@@ -4,6 +4,7 @@
     "@eslint/js",
     "eslint-plugin-unused-imports",
     "@typescript-eslint/eslint-plugin",
-    "@typescript-eslint/parser"
+    "@typescript-eslint/parser",
+    "typescript-eslint"
   ]
 }
