--- a/.ncurc.json
+++ b/.ncurc.json
@@ -1,10 +1,3 @@
 {
-  "reject": [
-    "eslint",
-    "@eslint/js",
-    "eslint-plugin-unused-imports",
-    "@typescript-eslint/eslint-plugin",
-    "@typescript-eslint/parser",
-    "typescript-eslint"
-  ]
+  "reject": []
 }
